# AWSAnimalCrossingModel

./: .coveragerc  .editorconfig  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: pull_request.yml
model/: __init__.py  achievement.py  aws.py  card.py  clothing_bag.py  clothing_headwear.py  clothing_sock.py  clothing_top.py  clothing_umbrella.py  construction.py  creature_fish.py  creature_insect.py  creature_sea.py  database.py  furniture_artwork.py  furniture_ceiling.py  furniture_fencing.py  furniture_floor.py  furniture_fossil.py  furniture_gyroid.py  furniture_housewear.py  furniture_interior_structure.py  furniture_miscellaneous.py  furniture_music.py  furniture_photo.py  furniture_poster.py  furniture_rug.py  furniture_wall_mounted.py  furniture_wallpaper.py  hha.py  item.py  item_other.py  net.py  occasion.py  paradise_planning.py  reaction.py  recipe.py  villager.py  villager_special.py
model/http/: __init__.py  method.py  status.py
tests/: __init__.py
tests/unit/: test_villager.py
